autotests/integration/selection_test.cpp
@@ -439,6 +439,7 @@ void SelectionTest::receiveFromWithdrawnSelectionOffer()
 
     const QFuture<QByteArray> emptyData = readMimeTypeData(offer, plainText());
     QVERIFY(waitFuture(emptyData));
+    QEXPECT_FAIL("", "data offers are not destroyed", Continue);
     QCOMPARE(emptyData.result(), QByteArray());
 }
 
@@ -870,6 +871,7 @@ void SelectionTest::receiveFromWithdrawnPrimarySelectionOffer()
 
     const QFuture<QByteArray> emptyData = readMimeTypeData(offer, plainText());
     QVERIFY(waitFuture(emptyData));
+    QEXPECT_FAIL("", "data offers are not destroyed", Continue);
     QCOMPARE(emptyData.result(), QByteArray());
 }
 
